# open-grind-premium

./: .envrc.example  .gitignore  AUDIT.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCEMENT-ROADMAP.md  FUNDING.md  GOVERNANCE.md  LICENSE  PREMIUM.md  README.md  ROADMAP.md  eslint.config.js  flake.nix  package.json  rust-toolchain.toml  svelte.config.js  tsconfig.json  vite.config.mjs
.cargo/: config.toml
.github/workflows/: build-apk.yml
contrib/: keystore.properties.example
docs/: UPSTREAM-COMPARISON-20260714.md  diff.txt  package.json
docs/.vitepress/: config.ts
docs/changelog/: RELEASE_NOTES_v0.1.0-alpha.11.md
docs/content/: governance.md  index.md  license.md
docs/content/grindr-api/: access-requests.md  authentication.md  boosting.md  bootstrap.md  drawer.md  gifs.md  grindrstore.md  heatmap.md  index.md  legal-agreements.md  logging.md  modal.md  notifications.md  offers.md  ratings.md  reddot.md  reports.md  rewarded-ads.md  rewarded-chats.md  right-now.md  security-headers.md  shared-types.md  storeapirest.md  third-party-integrations.md  top-picks.md  videocalls.md  vip.md  (+1 more)
docs/lib/: index.ts  openapi-3.0.schema.json  openapi.json
docs/scripts/: add-param-groups.ts  audit-coverage.ts  audit-links.ts  audit-openapi.ts  audit-queries.ts  cleanup-openapi.ts  generate-docs.ts  validate-openapi.ts
scripts/: build-linux.sh  build-windows.ps1  bump-version.sh  check-build-env.sh
scripts/android/: apply-doze-patches.sh
src/: hooks.client.ts  layout.css
src-tauri/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json  tauri.properties
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/ci/: fingerprint_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  log_init.rs  state.rs  storage.rs
src-tauri/src/api/: auth.rs  client.rs  headers.rs  mod.rs  rest.rs  rewrite.rs  version.rs  ws.rs
src-tauri/src/api/fixtures/: ban_response.json  bootstrap_free.json  entitlements_free.json  favorites_gated.json  inbox_gated.json  profile_free.json  settings_minimal.json  views_gated.json
src/lib/: api.ts  utils.ts  ws.svelte.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  hooks.client.ts
(+192 files in other folders)
