[package]
name = "open-grind"
version = "0.1.0-alpha.7"
description = "FLOSS Grindr client"
authors = ["Open Grind Governance (https://opengrind.org/governance)"]
homepage = "https://opengrind.org"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_grind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
keychain = ["dep:apple-native-keyring-store"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Used only by `ci/fingerprint_check.rs`, not present in production builds
[dev-dependencies]
sha2 = "0.10"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wreq = { version = "5.3", features = ["json", "websocket", "gzip"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "10"
rand = "0.10"
chrono = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
rmp-serde = "1.3"
serde_bytes = "0.11"
base64 = "0.22"
keyring-core = "0.7.2"
tauri-plugin-devtools = "2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain", "protected"], optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain", "protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2.1"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5.0"

